# mall_backend

./: .gitignore  README.md  pyproject.toml  render.yaml
addresses/: admin.py  models.py
addresses/migrations/: 0001_initial.py  0002_initial.py
carts/: admin.py  models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
config/: default.conf  urls.py
coupons/: admin.py  models.py
coupons/migrations/: 0001_initial.py  0002_initial.py  0003_coupon_created_at_coupon_updated_at.py
deals/: admin.py  models.py
deals/migrations/: 0001_initial.py
orders/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_remove_product_product_images.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
